--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 networks:
   hadoop-net:
+
 services:
   spark-master:
     build: .
@@ -61,7 +62,7 @@ services:
       - hadoop-net
     volumes:
       - ./spark-events:/tmp/spark-events  # Persist event logs here
-      - ./spark-defaults.conf:/opt/spark/conf/spark-defaults.conf`
+      - ./spark-defaults.conf:/opt/spark/conf/spark-defaults.conf
     environment:
       - SPARK_MODE=history-server
       - SPARK_HISTORY_OPTS=-Dspark.history.fs.logDirectory=file:/tmp/spark-events -Dspark.eventLog.enabled=true -Dspark.eventLog.dir=file:/tmp/spark-events
@@ -84,3 +85,44 @@ services:
     environment:
       - JAVA_HOME=/usr/local/openjdk-11
     restart: unless-stopped
+    container_name: hdfs-single-node
+
+  airflow:
+    depends_on:
+      - airflow-db
+    image: apache/airflow:2.10.2-python3.10
+    container_name: airflow-all
+    restart: always
+    ports:
+      - "8081:8080"
+    environment:
+      AIRFLOW__CORE__LOAD_EXAMPLES: "False"
+      AIRFLOW__CORE__EXECUTOR: LocalExecutor
+      AIRFLOW__CORE__FERNET_KEY: ""
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@airflow-db/airflow
+    volumes:
+      - ./dags:/opt/airflow/dags
+      - ./logs:/opt/airflow/logs
+      - ./plugins:/opt/airflow/plugins
+    command: >
+      bash -c "
+        airflow db upgrade &&
+        airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com || true &&
+        exec airflow webserver &
+        exec airflow triggerer &
+        exec airflow scheduler
+      "
+
+  airflow-db:
+    container_name: airflow-db
+    image: postgres:14
+    environment:
+      POSTGRES_USER: airflow
+      POSTGRES_PASSWORD: airflow
+      POSTGRES_DB: airflow
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
+
