--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,7 +106,7 @@ services:
       - ./plugins:/opt/airflow/plugins
     command: >
       bash -c "
-        airflow db upgrade &&
+        airflow db init &&
         airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com || true &&
         exec airflow webserver &
         exec airflow triggerer &
